MMCPA-1474: Megamenu jumping and border issues.
Update the theme for megamenu.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/header/_header-primary.scss
@@ -573,7 +573,7 @@ header {
       vertical-align: top;
       list-style: none;
       text-align: center;
-      border-bottom: 1px solid $white-five;
+      border-bottom: 1px solid transparent;
       padding: 0.55rem 0.625rem;
       text-transform: lowercase;
       height: 2.5625rem;
@@ -588,21 +588,13 @@ header {
       }
 
       &:hover {
-        border-top: 2px solid $marine-blue;
-
         ul.menu--two__list {
           visibility: visible;
           opacity: 1;
           z-index: 1;
           transform: translateY(0%);
-          transition-delay: 0.6s;
-          -webkit-transition-delay: 0.6s;
-        }
-
-        a.menu--one__link {
-          font-family: $alshaya-bold;
-          font-weight: normal;
-          color: $marine-blue;
+          transition-delay: 0.7s;
+          -webkit-transition-delay: 0.7s;
         }
       }
 
@@ -620,7 +612,7 @@ header {
         visibility: hidden;
         opacity: 0;
         position: absolute;
-        top: 100%;
+        top: 2.5625rem;
         #{$left}: 0;
         width: 100%;
         transform: translateY(-2.5rem);
@@ -629,16 +621,25 @@ header {
       }
     }
 
-    ul.menu--one__list {
+    .active--menu--links {
+      li.menu--one__list-item {
+        &:hover {
+          border-top: 2px solid $marine-blue;
+
+          a.menu--one__link {
+            font-family: $alshaya-bold;
+            font-weight: normal;
+            color: $marine-blue;
+          }
+        }
+      }
+
       &:hover {
         li.menu--one__list-item {
+          border-bottom: 1px solid $white;
+
           &:hover {
             border-bottom: 1px solid $white-five;
-          }
-
-          &:not(:hover) {
-            border-top: 2px solid $white-five;
-            border-bottom: 1px solid $white;
           }
         }
       }
@@ -649,7 +650,7 @@ header {
     position: absolute;
     width: 100%;
     text-align: $left;
-    top: 41px;
+    top: 2.5625rem;
     #{$left}: 0;
     #{$left}: 0;
     background: $white-five;
@@ -657,7 +658,7 @@ header {
     padding-top: 1.5625rem !important;
     padding-left: calc((100% - 1284px) / 2);
     padding-right: calc((100% - 1284px) / 2);
-    min-height: 350px;
+    min-height: 22.125rem;
 
     a {
       color: $peacock-blue;
